<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_carikamus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bt_searchkamus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_cari" />

    <ListView
        android:id="@+id/lv_kamus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.10" >
    </ListView>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end" >

        <Button
            android:id="@+id/bt_addkamus"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_tambah" />

        <Button
            android:id="@+id/bt_delkamus"
            style="@style/AppBaseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_del" />
    </TableRow>

</LinearLayout>