<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="voice.trans.me.TransTextActivity" >

    <TextView
        android:id="@+id/txt_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/mode_by" />

    <Spinner
        android:id="@+id/cb_mode2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_source" />

    <TextView
        android:id="@+id/txt_hasil_aks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_mode2"
        android:text="@string/kata_dicari" />

    <EditText
        android:id="@+id/txt_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_hasil_aks"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_speak2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_trans"
        android:text="@string/bt_cari" />

    <ListView
        android:id="@+id/lv_hasil2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/bt_speak2" >
    </ListView>

</RelativeLayout>
